Some warning cleanups, since it's spring